# glassbox-dfir

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/: ci.yml.disabled
config/: claude_desktop_config.example.json  glassbox.yaml.example
demo_case/: glassbox.yaml
demo_case/evidence/: .gitkeep
demo_case/fixtures/: disk_list_files.txt  disk_mft_timeline.txt  disk_partition_table.txt  evtx_hunt.json  evtx_to_json.json  mem_cmdline.json  mem_cmdscan.json  mem_dlllist.json  mem_handles.json  mem_malfind.json  mem_mftscan.json  mem_mutantscan.json  mem_netscan.json  mem_pslist.json  mem_psscan.json  mem_pstree.json  mem_psxview.json  mem_svcscan.json  pcap_conn_summary.txt  pcap_dns.txt  pcap_http.txt  registry_analyze_all.txt  yara_scan.txt
demo_case/ground_truth/: ground_truth.json
demo_output_sample/: case.execution_log.jsonl  case.report.json  case.report.md
docs/: ACCURACY_REPORT.md  ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  DATASET.md  DEMO_SCRIPT.md  PROJECT_DESCRIPTION.md  ROADMAP.md  SECURITY_HARDENING.md  SUBMISSION_CHECKLIST.md  SYSTEM_ASSESSMENT.md  WEB_UI.md
docs/samples/: case.execution_log.jsonl  case.report.md
rules/yara/: cridex_beacon.yar
src/glassbox/: __init__.py  cli.py  (+4 more)
tests/: conftest.py  test_adversarial.py  test_attack_mapping.py  test_audit_chain.py  test_cli_integration.py  test_correlation.py  test_detection.py  test_end_to_end.py  test_forensic.py  test_hallucination.py  test_ioc.py  test_lessons.py  test_security.py  test_sprint5.py  test_timeline.py  test_vault.py  test_web.py
(+81 files in other folders)
