[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glassbox-sift"
version = "0.1.0"
description = "GLASSBOX — a read-only, self-correcting, autonomous DFIR triage agent for the SANS SIFT Workstation. Every finding traces to a tool execution; the evidence is architecturally untouchable."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "The GLASSBOX Authors" }]
keywords = ["dfir", "incident-response", "mcp", "sift", "forensics", "langgraph", "mitre-attack"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "mcp==1.27.2",
    "langgraph==1.2.4",
    "pydantic>=2.7,<3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
glassbox = "glassbox.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_ORG/glassbox-sift"
Repository = "https://github.com/YOUR_ORG/glassbox-sift"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
